@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.2.23-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-02-23 09:53:16, took 00:23:28, with 50 workers, on 4284 cases, 1 failed, 0 traces, 13 retries<br/>
+tested: 2026-02-23 10:31:11, took 00:16:23, with 50 workers, on 4284 cases, 0 failed, 0 traces, 3 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -1186,7 +1186,7 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-tls09.tst">crypt-tls09.tst</a></td><td>success</td><td>tls with mldsa</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard01.tst">crypt-wireguard01.tst</a></td><td>success</td><td>wireguard over ipv4</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard02.tst">crypt-wireguard02.tst</a></td><td>success</td><td>wireguard over ipv6</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard03.tst">crypt-wireguard03.tst</a></td><td>#6-run-r1 tping 100 10 3.3.3.2 vrf v1</td><td>wireguard over wireguard</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard03.tst">crypt-wireguard03.tst</a></td><td>success</td><td>wireguard over wireguard</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard04.tst">crypt-wireguard04.tst</a></td><td>success</td><td>wireguard over loopback</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard05.tst">crypt-wireguard05.tst</a></td><td>success</td><td>wireguard over asymmetric ports</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/demo01.tst">demo01.tst</a></td><td>success</td><td>empty demo network</td></tr>
