@@ -18082,3 +18082,6 @@ qc pass: wireguard over asymmetric ports
 ---------------------------------- 2026-02-23 09:29:48 26.2.23
 no qc pass: wireguard over wireguard
 failed: wireguard over wireguard
+---------------------------------- 2026-02-23 10:14:47 26.2.23
+no failed: wireguard over wireguard
+qc pass: wireguard over wireguard
